--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-.idea
-*.pyc
-build
-dist
-*.egg-info
+# general things to ignore
+build/
+dist/
+*.egg-info/
+*.egg
+*.py[cod]
+__pycache__/
+*.so
+*~
+venv/
+
+# due to using nox and pytest
+.nox
+.cache
