--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ name = "singleton_package"  # REQUIRED, is the only field that cannot be marked 
 #
 # For a discussion on single-sourcing the version, see
 # https://packaging.python.org/guides/single-sourcing-package-version/
-version = "0.6.0"  # REQUIRED, although can be dynamic
+version = "0.6.1"  # REQUIRED, although can be dynamic
 
 # This is a one-line description or tagline of what your project does. This
 # corresponds to the "Summary" metadata field:
@@ -146,11 +146,10 @@ test = ["coverage"]
 # maintainers, and where to support the project financially. The key is
 # what's used to render the link text on PyPI.
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
-"Funding" = "https://donate.pypi.org"
-"Say Thanks!" = "http://saythanks.io/to/example"
-"Source" = "https://github.com/pypa/sampleproject/"
+"Homepage" = "https://github.com/mahdikiani/singleton_package"
+"Bug Reports" = "https://github.com/mahdikiani/singleton_package/issues"
+"Say Thanks!" = "https://saythanks.io/to/mahdikiani"
+"Source" = "https://github.com/mahdikiani/singleton_package"
 
 # The following would provide a command line executable called `sample`
 # which executes the function `main` from this package when invoked.
