Update version to 0.6.1, enhance type hints in Singleton class, and add Ruff configuration for linting and formatting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior 
 
 [project]
 name = "singleton_package" 
-version = "0.6.0" 
+version = "0.6.1" 
 description = "A simple Python package to create singleton objects"
 readme = "README.md"
 requires-python = ">=3"
@@ -28,6 +28,7 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3 :: Only",
+  "Typing :: Typed",
 ]
 dependencies = []
 [project.optional-dependencies]
@@ -45,6 +46,19 @@ test = ["coverage"]
 # [project.scripts]
 # singleton = "singleton:main"
 
-
 [tool.setuptools]
-package-data = {"singleton" = ["*.dat"]}
+package-data = {"singleton" = ["*.dat", "*.pyi", "py.typed"]}
+
+
+[tool.ruff]
+line-length = 79
+target-version = "py313"
+fix = true
+unsafe-fixes = true
+preview = true
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP", "B"]
+
+[tool.ruff.format]
+quote-style = "double"
