Update version to 0.8.2, enhance type hints across the codebase, improve Ruff linting configuration, and adjust test class names for clarity.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior 
 
 [project]
 name = "singleton_package" 
-version = "0.8.1" 
+version = "0.8.2" 
 description = "A simple Python package to create singleton objects"
 readme = "README.md"
 requires-python = ">=3"
@@ -49,7 +49,6 @@ test = ["coverage"]
 [tool.setuptools]
 package-data = {"singleton" = ["*.dat", "*.pyi", "py.typed"]}
 
-
 [tool.ruff]
 line-length = 79
 target-version = "py313"
@@ -58,7 +57,41 @@ unsafe-fixes = true
 preview = true
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "I", "UP", "B"]
+select = [
+  "F",     # Pyflakes: critical errors and unused code
+  "E",
+  "W",     # PEP8: formatting issues
+  "I",     # isort: import sorting
+  "UP",    # pyupgrade: modern syntax
+  "B",     # bugbear: potential bugs
+  "T",     # debugger / print statement checks
+  "C",     # complexity: complexity checking
+  "A",     # avoids shadowing Python built-ins
+  "ASYNC", # async/await syntax
+  "SIM",   # simplify: cleaner code
+  "PERF",  # performance optimizations
+  "TRY",   # better try/excepts
+  "N",     # naming conventions
+  "S",     # security checks
+  "ANN",   # type annotation checks
+  "T20",   # no print()
+  "C4",    # comprehension: better loops
+  "COM",   # enforces trailing commas where needed.
+  "EXE",   # executable: executable checking
+  "ISC",   # implicit string concatenation
+  "G",     # misuse of logging string interpolation
+  # "D",     # docstrings: docstring checking
+  "ERA", # remove commented code
+  "RUF", # ruff-specific improvements
+]
+per-file-ignores = { "tests/*" = ["G004", "S101"], "server/db.py" = ["TRY"] }
+ignore = ["TRY003", "COM812"]
 
 [tool.ruff.format]
 quote-style = "double"
+
+[tool.mypy]
+python_version = "3.13"
+ignore_missing_imports = true
+check_untyped_defs = false
+disallow_untyped_defs = false
